<?xml version="1.0"?>
<package format="3">
  <name>plan_manager</name>
  <version>0.0.0</version>
  <description>DDR-opt planning orchestration node and demo launch files.</description>
  <maintainer email="zmk@todo.todo">zmk</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ddr_opt_ros2_compat</depend>
  <depend>carstatemsgs</depend>
  <depend>plan_env</depend>
  <depend>front_end</depend>
  <depend>back_end</depend>
  <depend>mpc_controller</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>laser_simulator</exec_depend>
  <exec_depend>simulator</exec_depend>
  <exec_depend>icrekf</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
