<?xml version="1.0"?>
<package format="3">
  <name>ddr_opt_ros2_compat</name>
  <version>0.0.0</version>
  <description>Small ROS2 compatibility layer for the DDR-opt ROS1-style sources.</description>
  <maintainer email="zmk@todo.todo">zmk</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>carstatemsgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
