<?xml version="1.0"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>DDR-opt differential-drive simulation utilities.</description>
  <maintainer email="zmk@todo.todo">zmk</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ddr_opt_ros2_compat</depend>
  <depend>carstatemsgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
